[SNS--10973698] Fixed uneven product card height (#244)
* Fixed uneven product card height

* Minor change

--- a/scss/components/product-card.scss
+++ b/scss/components/product-card.scss
@@ -29,6 +29,10 @@ product-card {
     cursor: pointer;
     padding: var(--section-padding);
     padding-bottom: 0;
+
+    @media(--md-large){
+      min-height: 230px !important;
+    }
   }
 
   &__body {
